--- a/index.html
+++ b/index.html
@@ -1,10 +1,111 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>About - My Cool Website</title>
-   </head>
-   <body>
-      <h1>About my website! 🎙</h1>
-      <p>Thanks for following this tutorial. 🙏</p>
-   </body>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>About Me - [Your Name]</title>
+   <style>
+      body {
+         font-family: Arial, sans-serif;
+         line-height: 1.6;
+         margin: 0;
+         padding: 0;
+         background-color: #f4f4f4;
+         color: #333;
+      }
+      header {
+         background: #333;
+         color: #fff;
+         padding: 1rem 0;
+         text-align: center;
+      }
+      nav {
+         text-align: center;
+         padding: 1rem;
+         background: #444;
+      }
+      nav a {
+         color: #fff;
+         margin: 0 10px;
+         text-decoration: none;
+         font-weight: bold;
+      }
+      section {
+         max-width: 800px;
+         margin: 20px auto;
+         padding: 20px;
+         background: #fff;
+         border-radius: 8px;
+         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      }
+      h1, h2, h3 {
+         color: #222;
+      }
+      footer {
+         text-align: center;
+         padding: 1rem;
+         background: #333;
+         color: #fff;
+         position: relative;
+         bottom: 0;
+         width: 100%;
+      }
+   </style>
+</head>
+<body>
+   <header>
+      <h1>Welcome to My Portfolio</h1>
+      <p>[Your Name] - Data Scientist | Enthusiastic Learner</p>
+   </header>
+   <nav>
+      <a href="#about">About Me</a>
+      <a href="#skills">Skills</a>
+      <a href="#experience">Experience</a>
+      <a href="#education">Education</a>
+      <a href="#contact">Contact</a>
+   </nav>
+   <section id="about">
+      <h2>About Me</h2>
+      <p>
+         Hello! I'm [Your Name], a passionate data scientist based in Zurich with a knack for turning raw data into actionable insights. 
+         My expertise spans across data analysis, machine learning, and predictive modeling, and I thrive on tackling complex problems.
+      </p>
+   </section>
+   <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+         <li>Programming: Python, R, SQL</li>
+         <li>Data Visualization: Tableau, Matplotlib, Seaborn</li>
+         <li>Machine Learning: TensorFlow, Scikit-learn</li>
+         <li>Cloud Platforms: AWS, Google Cloud</li>
+         <li>Other Tools: Git, Jupyter Notebook, Excel</li>
+      </ul>
+   </section>
+   <section id="experience">
+      <h2>Experience</h2>
+      <h3>Data Scientist - [Your Previous Company]</h3>
+      <p><strong>Dates:</strong> [Start Date] - [End Date or Present]</p>
+      <ul>
+         <li>Developed predictive models to improve customer retention by 20%.</li>
+         <li>Collaborated with cross-functional teams to deliver actionable insights using SQL and Tableau.</li>
+         <li>Automated data pipelines, reducing processing time by 40%.</li>
+      </ul>
+   </section>
+   <section id="education">
+      <h2>Education</h2>
+      <h3>[Your Degree]</h3>
+      <p><strong>Institution:</strong> [University Name]</p>
+      <p><strong>Graduation Year:</strong> [Year]</p>
+      <p>Relevant Courses: Machine Learning, Data Mining, Statistical Analysis</p>
+   </section>
+   <section id="contact">
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a></p>
+      <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+   </section>
+   <footer>
+      <p>© 2024 [Your Name]. All rights reserved.</p>
+   </footer>
+</body>
 </html>
